cmake_minimum_required(VERSION 3.25)
project(ch1_Elements_Of_Programing C)

set(CMAKE_C_STANDARD 11)

add_executable(HelloWorld HelloWorld.c)
add_executable(UseArgument UseArgument.c)
add_executable(Ruler Ruler.c)
add_executable(template template.c)
add_executable(IntOps  "IntOps.c")
add_executable(Quadratic Quadratic.c)
add_executable(LeapYear LeapYear.c)
add_executable(RandomInt RandomInt.c)
add_executable(Flip Flip.c)
add_executable(TenHellos TenHellos.c)
add_executable(PowersOfTwo PowersOfTwo.c)
add_executable(DivisorPattern DivisorPattern.c)
add_executable(HarmonicNumber HarmonicNumber.c)
add_executable(Sqrt Sqrt.c)
add_executable(Binary Binary.c)
add_executable(Gambler Gambler.c)
add_executable(Factors Factors.c)
add_executable(Sample Sample.c)
add_executable(CouponCollector CouponCollector.c)
add_executable(PrimeSieve PrimeSieve.c)
add_executable(SelfAvoidingWalk SelfAvoidingWalk.c)
add_executable(RandomSeq RandomSeq.c)